HelloUltraviolet/Fixtures/RejectedSource/Comptime/InvalidQuotedContent/Source/Main.uv
//! Rejected compile-time specimen for syntactically invalid quoted content.

public procedure invalidQuotedContentReference() -> i32 {
    comptime {
        let ast = quote type { 1 + }
    }
    return 0
}
